--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Joshua Uyheng</title>
     <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/sf-pixelate">
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="styles/index.css" />
 
     <meta property="og:title" content="Joshua Uyheng" />
     <meta
@@ -22,7 +22,7 @@
             <h1>Wild JOSH has appeared!</h1>
         </div>
         <nav class="site-nav">
-            <a href="/pages/about.html">About</a>
+            <a href="#">About</a>
             <a href="#">News and Updates</a>
             <a href="#">Research Themes</a>
             <a href="#">Contact</a>
@@ -49,7 +49,7 @@
         <div class="pokemon">
             <div class="profile-picture">
                 <img 
-                    src="/images/profile-pic.jpg"
+                    src="images/profile-pic.jpg"
                     alt="A photo of Josh"
                 />
             </div>
