--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Joshua Uyheng</title>
-    <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/sf-pixelate">
+    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/sf-pixelate">
     <link rel="stylesheet" href="styles/index.css" />
 
     <meta property="og:title" content="Joshua Uyheng" />
