--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Wild JOSH has appeared!</h1>
         </div>
         <nav class="site-nav">
-            <a href="#">About</a>
+            <a href="https://portfolio-joshuauyheng-about.netlify.app/">About</a>
             <a href="#">News and Updates</a>
             <a href="#">Research Themes</a>
             <a href="#">Contact</a>
